--- a/style.scss
+++ b/style.scss
@@ -258,7 +258,7 @@ body {
 
 .footer {
     height: 80px;
-    background-color: #11161d;
+    background-color: #13181e;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -386,14 +386,14 @@ body {
     .content {
         .show-list {
             grid-template-columns: repeat(auto-fill,minmax(130px,1fr));
-            grid-gap: 25px 20px;
+            grid-gap: 15px 10px;
             padding: 0 20px;
             justify-content: center;
-            margin: 30px 10px 30px 10px;
+            margin: 30px 0 30px 0;
     
             div {
                 width: 100%;  
-                padding: 5px;  
+                padding: 5px 5px 5px 5px;  
     
                 .image {
                     height: auto;
@@ -408,7 +408,11 @@ body {
                 }
         
                 .title {
-                    font-size: 12px;
+                    font-size: 15px;
+                    text-align: center;
+                    margin-top: 8px;
+                    line-height: 18px;
+                    font-weight: 400;
                 }
             }
         }
