--- a/assets/index-style.scss
+++ b/assets/index-style.scss
@@ -766,50 +766,62 @@ body {
                 }
 
                 #sort-options {
-                    display: initial;
+                    display: none;
                     position: fixed;
                     cursor: default;
                     width: 100%;
-                    height: 35%;
-                    background: linear-gradient(to top, #151f2e, #212a37);
+                    height: 100%;
+                    background: linear-gradient(to top, #151f2ea2, #212a37a2);
                     left: 0;
-                    bottom: 0;
+                    top: 0;
                     z-index: 10;
-                    transform: translateY(100%);
-                    border-radius: 8px 8px 0 0;
-                    transition: 0.4s ease;
+                    align-items: center;
+                    justify-content: center;
 
                     &.active {
-                        transform: translateY(0%);
+                       display: flex;
                     }
 
                     .option-container {
+                        position: relative;
+                        margin: auto;
+                        height: 70%;
+                        width: 70%;
+                        max-width: 350px;
+                        background: linear-gradient(to top, #151f2e, #212a37);
+                        border-radius: 8px;
+
                         display: flex;
                         align-items: center;
                         justify-content: space-evenly;
                         flex-direction: column;
-                        height: 100%;
-                        opacity: 0;
-                        transition: 0.3s ease;
                         z-index: 10;
 
-                        &.active {
-                            opacity: 1;
-                        }
-
                         h3 {
-                            margin: 0 55px;
-                            width: 60%;
-                            background-color: #0b1622;
                             border: none;
-                            padding: 9px 10px;
+                            padding: 0 20px;
+                            width: 100%;
                             border-radius: 4px;
                             color: #6c7784;
-                            font-size: 17px;
+                            font-size: 25px;
                             cursor: pointer;
                             transition: 0.15s;
                             font-family: sans-serif;
-                            text-align: center;
+                            text-align: left;
+                            position: relative;
+
+                            &.active:after {
+                                background-color: #3db4f2;
+                                width: 12px;
+                                height: 12px;
+                                border-radius: 50px;
+                                position: absolute;
+
+                                content: "";
+                                right: 50px;
+                                top: 15px;
+    
+                            }
                         }
                     }
                 }
